# ACP2-Twitter-Profile-Scoring

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Dockerfile.nginx  Labelled data.json  README.md  build.sh  db.py  deploy.sh  docker-compose.yml  dotenv_base.txt  main.py  nginx-basic-auth.conf  pyproject.toml  run-nginx.sh  scoring.py  start.sh  survey_1.html  twitter_handler.py
TWITTER-API-SCRIPTS/: JSInjection.py  html2image.py  idList.txt  tokens.py  tweets.py
common/: logger.py
ml/: dataset_reader.py  feature_extractor.py  model_inference.py  train.ipynb  train_numeric_own.ipynb
ml/model/: model.pkl  scaler.pkl
mturk/: Imagesaved_profile_idlist.txt  answers.json  keys.ini  list.txt  mturk-answers.py  mturk-set.py  question.xml  question2.xml  random_100_idlist.txt
tas/: html2image.py  idList.txt  tokens.py  tweets.py
twitter-rater-ui/: .env.production  README.md  package-lock.json  package.json
twitter-rater-ui/src/: App.vue  main.js
twitter-rater-ui/src/components/: MainPage.vue
twitter-rater-ui/src/router/: index.js
twitter-rater-ui/src/store/: store.js
twitter-rater-ui/src/views/: MainPage.vue  ProfilePage.vue
