[tool.poetry]
name = "acp2-twitter-profile-scoring"
version = "0.1.0"
description = ""
authors = ["Roope Rajala <roope.rajala.ext@nokia.com>"]

[tool.poetry.dependencies]
Flask = "^2.0.2"
pandas = "^1.3.4"
python = "^3.8"
scikit-learn = "^1.0.1"
ipykernel = "^6.5.1"
graphviz = "^0.18.2"
py7zr = "^0.17.0"
python-dotenv = "^0.19.2"
nbformat = "^5.1.3"
matplotlib = "^3.5.1"
treeinterpreter = "^0.2.3"
boto3 = "^1.20.34"
nltk = "^3.6.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
